tests/sksl/errors/OverloadedMain.glsl
### Compilation failed:

error: 5: no type named 'TODO'
TODO(johnstiles): overloading main should be forbidden
^^^^
error: 5: expected a type, but found '('
TODO(johnstiles): overloading main should be forbidden
    ^
2 errors
